--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/public/css
+/public/fonts
+/public/img
+/public/js
+/public/sass
+/public/source
